[package]
name = "stacky-lsp"
version = "0.1.2"
edition = "2024"
description = "Stacky language server"
authors = ["nuskey"]
license = "MIT"
repository = "https://github.com/stacky-language/stacky-lsp"
readme = "README.md"
keywords = ["stacky", "lsp"]
categories = ["command-line-utilities"]
include = ["Cargo.toml", "LICENSE", "README.md", "src/**"]

[[bin]]
name = "stacky-lsp"
path = "src/main.rs"

[dependencies]
lsp-server = "0.7"
lsp-types = "0.95"
once_cell = "1.21.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
stacky = "0.1.2"
